# ui_app/src/app/services/models.ts
@@ -6,5 +6,6 @@ export { AuthenticationRequest } from './models/authentication-request';
 export { AuthenticationResponse } from './models/authentication-response';
 export { CarRequest } from './models/car-request';
 export { CarResponse } from './models/car-response';
+export { EmailRequest } from './models/email-request';
 export { NewPasswordCouple } from './models/new-password-couple';
 export { RegistrationRequest } from './models/registration-request';
