# ui_app/src/app/services/models/email-request.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface EmailRequest {
+  email: string;
+}
